[css] fixing whitespace

--- a/assets/css/templates/_related-showcase.scss
+++ b/assets/css/templates/_related-showcase.scss
@@ -227,6 +227,8 @@
     .related__showcase {
         padding-top: 6rem;
         padding-bottom: 8rem;
+        padding-left: 6rem;
+        padding-right: 6rem;
     }
 }
 
